<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color60"
    android:orientation="vertical"
    android:gravity="top"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="top">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:src="@drawable/pho_caret_left"
            app:tint="@color/iconColor"
            android:contentDescription="@string/back_button" />

        <TextView
            style="@style/Headline1"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="16dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            app:boxStrokeColor="@color/accentBlue"
            app:hintTextColor="@color/accentBlue"
            app:cursorColor="@color/iconColor"
            app:startIconDrawable="@drawable/pho_envelope_simple"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/Hint"
                android:id="@+id/et_email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Button"
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:paddingVertical="13dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color10"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progress_bar_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</LinearLayout>