<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color60"
    android:fitsSystemWindows="true"
    tools:context=".activity.AccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            style="@style/Headline1"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:src="@drawable/pho_caret_left"
            app:tint="@color/iconColor"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_button" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/title"
            android:layout_marginTop="24dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:background="@drawable/rounded_corners_background"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_pencil_simple_fill"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/edit_profile"
                        app:tint="@color/iconColor" />

                    <TextView
                        style="@style/Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/edit_profile" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_caret_right"
                        app:tint="@color/iconColor"
                        android:contentDescription="@string/settings"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_password_fill"
                        app:tint="@color/iconColor"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/change_password" />

                    <TextView
                        style="@style/Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/change_password"
                        />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_caret_right"
                        app:tint="@color/iconColor"
                        android:contentDescription="@string/settings"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:id="@+id/logout_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_sign_out_fill"
                        app:tint="@color/iconColor"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/logout" />

                    <TextView
                        style="@style/Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/logout"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>


                <RelativeLayout
                    android:id="@+id/delete_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/pho_trash_simple_fill"
                        app:tint="@color/accentRed"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/logout" />

                    <TextView
                        style="@style/Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:textColor="@color/accentRed"
                        android:text="@string/delete_account"
                        />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>