<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color60"
    android:fitsSystemWindows="true"
    tools:context=".activity.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            style="@style/Headline1"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:src="@drawable/pho_caret_left"
            app:tint="@color/iconColor"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_button" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/title"
            android:padding="4dp"
            android:layout_marginTop="24dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="Aktuelles Passwort"
                    app:boxStrokeColor="@color/accentBlue"
                    app:hintTextColor="@color/accentBlue"
                    app:cursorColor="@color/iconColor"
                    app:startIconDrawable="@drawable/pho_password"


                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">


                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Hint"
                        android:id="@+id/et_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textVisiblePassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Neues Passwort"
                app:boxStrokeColor="@color/accentBlue"
                app:hintTextColor="@color/accentBlue"
                app:cursorColor="@color/iconColor"
                app:startIconDrawable="@drawable/pho_password"

                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">


                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Hint"
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/Button"
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:paddingVertical="13dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/color10"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/progress_bar_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="20dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>